[DBG] change format of code

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -1,26 +1,26 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Baihan Lin's personal website">
-        <meta name="author" content="Baihan Lin">
-        <title>Baihan Lin</title>
-        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
-        <link href="../../css/bootstrap.css" rel="stylesheet">
-        <link href="../../css/resume.css" rel="stylesheet">
-        <link href="../../css/font-awesome.css" rel="stylesheet">
-        <link href="../../css/devicons.css" rel="stylesheet">
-        <link href="../../css/simple-line-icons.css" rel="stylesheet">
-    </head>
-    <body>
-<!--         <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="sideNav">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Baihan Lin's personal website">
+    <meta name="author" content="Baihan Lin">
+    <title>Baihan Lin</title>
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
+    <link href="../../css/bootstrap.css" rel="stylesheet">
+    <link href="../../css/resume.css" rel="stylesheet">
+    <link href="../../css/font-awesome.css" rel="stylesheet">
+    <link href="../../css/devicons.css" rel="stylesheet">
+    <link href="../../css/simple-line-icons.css" rel="stylesheet">
+</head>
+
+<body>
+    <!--         <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top" id="sideNav">
             <h3 class="bottom-some"><a style="color:#ffffff;display:inline;text-transform:none;" href="../../#">Baihan Lin&nbsp;&nbsp;</a></h3>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -139,38 +139,38 @@
                 </ul>
             </div>
         </nav> -->
-        <div class="container-fluid p-0">
-            <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
-                <div class="my-auto">
-                    <h2 class="mb-5", style="text-transform:none">iTDA: interactive topological data analysis (Demo)</h2>
+    <div class="container-fluid p-0">
+        <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="">
+            <div class="my-auto">
+                <h2 class="mb-5" , style="text-transform:none">iTDA: interactive topological data analysis (Demo)</h2>
 
-                    <b class="text-primary"> by <a href="https://www.baihan.nyc/">Baihan Lin</a>, Columbia University, 2019 &nbsp; </b>
-                    <p class="mb-5 text-primary">
-                        <br> To visualize and compare a few state-of-the-art dimension reduction methods with TDA...
-                        <br>
-                        <table class="field-table">
+                <b class="text-primary"> by <a href="https://www.baihan.nyc/">Baihan Lin</a>, Columbia University, 2019 &nbsp; </b>
+                <p class="mb-5 text-primary">
+                    <br> To visualize and compare a few state-of-the-art dimension reduction methods with TDA...
+                    <br>
+                    <table class="field-table">
 
                         <tr>
-                        <td class="mb-5 text-primary"> Dataset: </td> 
-                        <td class="mb-5 text-primary"> 
-                            <input type="radio" name="dataset" value="farrell" checked>&nbsp;scRNA-seq (Farrell et al., 2018) [10]&nbsp;
-                            <input type="radio" name="dataset" value="mnist">&nbsp; MNIST (LeCun et al., 1998) &nbsp;
-                            <input type="radio" name="dataset" value="farrell" checked>&nbsp; neural recording (Bell et al., 2011) &nbsp;
-                        </td>
+                            <td class="mb-5 text-primary"> Dataset: </td>
+                            <td class="mb-5 text-primary">
+                                <input type="radio" name="dataset" value="farrell" checked>&nbsp;scRNA-seq [10]&nbsp;
+                                <input type="radio" name="dataset" value="mnist">&nbsp; MNIST &nbsp;
+                                <input type="radio" name="dataset" value="farrell" checked>&nbsp; neural recording &nbsp;
+                            </td>
                         </tr>
 
                         <tr>
-                        <td class="mb-5 text-primary"> Metric: </td> 
-                        <td class="mb-5 text-primary"> 
-                            <input type="radio" name="metric" value="euc" checked>&nbsp;Euclidean&nbsp;
-                            <input type="radio" name="metric" value="cor">&nbsp;Correlation&nbsp;
-                            <input type="radio" name="metric" value="cor">&nbsp;kNN&nbsp;
-                            <input type="radio" name="metric" value="ham">&nbsp;Hamming&nbsp;
-                            <input type="radio" name="metric" value="cos">&nbsp;Cosine&nbsp;
-                        </td>
+                            <td class="mb-5 text-primary"> Metric: </td>
+                            <td class="mb-5 text-primary">
+                                <input type="radio" name="metric" value="euc" checked>&nbsp;Euclidean&nbsp;
+                                <input type="radio" name="metric" value="cor">&nbsp;Correlation&nbsp;
+                                <input type="radio" name="metric" value="cor">&nbsp;kNN&nbsp;
+                                <input type="radio" name="metric" value="ham">&nbsp;Hamming&nbsp;
+                                <input type="radio" name="metric" value="cos">&nbsp;Cosine&nbsp;
+                            </td>
                         </tr>
 
-                        <tr> 
+                        <tr>
                             <td class="mb-5 text-primary"> Embedding: </td>
                             <td class="mb-5 text-primary">
                                 <input type="radio" name="embedding" value="pca" checked> &nbsp;PCA [1] &nbsp;
@@ -184,90 +184,78 @@
 
                             </td>
                         </tr>
-                        <tr> 
+                        <tr>
                             <td class="mb-5 text-primary"> Clustering: </td>
-                            <td class="mb-5 text-primary"> 
-                                <input type="radio" name="clustering" value="none" checked> &nbsp;none  &nbsp;
-                                <input type="radio" name="clustering" value="kmeans"> &nbsp;kMeans  &nbsp;
+                            <td class="mb-5 text-primary">
+                                <input type="radio" name="clustering" value="none" checked> &nbsp;none &nbsp;
+                                <input type="radio" name="clustering" value="kmeans"> &nbsp;kMeans &nbsp;
                                 <input type="radio" name="clustering" value="knn"> &nbsp;kNN &nbsp;
                             </td>
                         </tr>
-                        <tr> 
+                        <tr>
                             <td class="mb-5 text-primary"> TDA: </td>
-                            <td class="mb-5 text-primary"> 
-                                <input type="radio" name="tda" value="none" checked> &nbsp;none&nbsp; 
+                            <td class="mb-5 text-primary">
+                                <input type="radio" name="tda" value="none" checked> &nbsp;none&nbsp;
                                 <input type="radio" name="tda" value="tda"> &nbsp;TDA [4]&nbsp;
                                 <input type="radio" name="tda" value="ttda"> &nbsp;tTDA [7]&nbsp;
                                 <input type="radio" name="tda" value="tsa"> &nbsp;TSA [8]&nbsp;
                             </td>
-                            <td class="mb-5 text-primary"> 
-                                <button onclick="" style="border-radius:12px;" id="advancedtda" disabled> &nbsp;advanced options&nbsp;</button>
+                            <td class="mb-5 text-primary">
+                                <button onclick="" style="border-radius:12px;" id="advancedtda" disabled> &nbsp;options&nbsp;</button>
                             </td>
 
                         </tr>
                     </table>
 
                     <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
-                    </p>
+                </p>
 
+                <div id="graph"></div>
 
-                    <div id="graph"></div>
+                <script>
+                    dummyGraph();
+                </script>
 
-                    <script> 
-                        dummyGraph();
-                        function dummyGraph() {
-                            fetch('../datasets/miserables.json').then(res => res.json()).then(data => {
-                            const Graph = ForceGraph()
-                            (document.getElementById('graph'))
-                            .graphData(data)
-                            .nodeId('id')
-                            .nodeRelSize(4)
-                            .nodeVal('val')
-                            .nodeLabel('id'+':'+'group')
-                            .nodeAutoColorBy('group')
-                            .linkSource('source')
-                            .linkTarget('target')
-                            .height(600)
-                        });
-                        }
-                    </script>
-                    
-                    <p class="mb-5 text-primary">
-                        <b> References: </b><br>
-                        <br> [1] Wold, S., Esbensen, K., & Geladi, P. (1987). Principal component analysis. <i>Chemometrics and intelligent laboratory systems</i>, 2(1-3), 37-52.
-                        <br> [2] Borg, I., & Groenen, P. (2003). Modern multidimensional scaling: Theory and applications. <i>Journal of Educational Measurement</i>, 40(3), 277-280.
-                        <br> [3] Maaten, L. V. D., & Hinton, G. (2008). Visualizing data using t-SNE. <i>Journal of machine learning research</i>, 9(Nov), 2579-2605.
-                        <br> [4] Carlsson, G. (2009). Topology and data. <i>Bulletin of the American Mathematical Society</i>, 46(2), 255-308.
-                        <br> [5] Churchland, M. M., Cunningham, J. P., Kaufman, M. T., Foster, J. D., Nuyujukian, P., Ryu, S. I., & Shenoy, K. V. (2012). Neural population dynamics during reaching. <i> Nature</i>, 487(7405), 51.
-                        <br> [6] Lin, B., Mur, M., Kietzmann, T., & Kriegeskorte, N. (2019). Visualizing Representational Dynamics with Multidimensional Scaling Alignment. <i>2019 Conference on Cognitive Computational Neuroscience (CCN)</i>, 1030-1033
-                        <br> [7] Lin, B. Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. <i> 2019 Conference on Intelligent Systems for Molecular Biology (ISMB)</i>.
-                        <br> [8] Lin, B., Rabadan, R., & Kriegeskorte, N. (2019) What About Higher-Order Cellular Complexity? An Inquiry with Topological Simplicial Analysis. <i> 2019 NeurIPS 2019 Workshop on Learning Meaningful Representations of Life (LMRL)</i>.
-                        <br> [9] Rizvi, A. H., Camara, P. G., Kandror, E. K., Roberts, T. J., Schieren, I., Maniatis, T., & Rabadan, R. (2017). Single-cell topological RNA-seq analysis reveals insights into cellular differentiation and development. <i>Nature biotechnology</i>, 35(6), 551.
-                        <br> [10] Farrell, J. A., Wang, Y., Riesenfeld, S. J., Shekhar, K., Regev, A., & Schier, A. F. (2018). Single-cell reconstruction of developmental trajectories during zebrafish embryogenesis. <i>Science</i>, 360(6392), eaar3131. 
-                        <br> Bell, A. H., Malecek, N. J., Morin, E. L., Hadj-Bouziane, F., Tootell, R. B., & Ungerleider, L. G. (2011). Relationship between functional magnetic resonance imaging-identified regions and neuronal category selectivity. <i>Journal of Neuroscience</i>, 31(34), 12229-12240.
-                        <br> LeCun, Y., Cortes, C., & Burges, C. J. (1998). The MNIST database of handwritten digits, 1998. URL http://yann.lecun.com/exdb/mnist, 10, 34.
-                        <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
-                    </p>
+                <p class="mb-5 text-primary">
+                    <b> References: </b>
+                    <br>
+                    <br> [1] Wold, S., Esbensen, K., & Geladi, P. (1987). Principal component analysis. <i>Chemometrics and intelligent laboratory systems</i>, 2(1-3), 37-52.
+                    <br> [2] Borg, I., & Groenen, P. (2003). Modern multidimensional scaling: Theory and applications. <i>Journal of Educational Measurement</i>, 40(3), 277-280.
+                    <br> [3] Maaten, L. V. D., & Hinton, G. (2008). Visualizing data using t-SNE. <i>Journal of machine learning research</i>, 9(Nov), 2579-2605.
+                    <br> [4] Carlsson, G. (2009). Topology and data. <i>Bulletin of the American Mathematical Society</i>, 46(2), 255-308.
+                    <br> [5] Churchland, M. M., Cunningham, J. P., Kaufman, M. T., Foster, J. D., Nuyujukian, P., Ryu, S. I., & Shenoy, K. V. (2012). Neural population dynamics during reaching. <i> Nature</i>, 487(7405), 51.
+                    <br> [6] Lin, B., Mur, M., Kietzmann, T., & Kriegeskorte, N. (2019). Visualizing Representational Dynamics with Multidimensional Scaling Alignment. <i>2019 Conference on Cognitive Computational Neuroscience (CCN)</i>, 1030-1033
+                    <br> [7] Lin, B. Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation. <i> 2019 Conference on Intelligent Systems for Molecular Biology (ISMB)</i>.
+                    <br> [8] Lin, B., Rabadan, R., & Kriegeskorte, N. (2019) What About Higher-Order Cellular Complexity? An Inquiry with Topological Simplicial Analysis. <i> 2019 NeurIPS 2019 Workshop on Learning Meaningful Representations of Life (LMRL)</i>.
+                    <br> [9] Rizvi, A. H., Camara, P. G., Kandror, E. K., Roberts, T. J., Schieren, I., Maniatis, T., & Rabadan, R. (2017). Single-cell topological RNA-seq analysis reveals insights into cellular differentiation and development. <i>Nature biotechnology</i>, 35(6), 551.
+                    <br> [10] Farrell, J. A., Wang, Y., Riesenfeld, S. J., Shekhar, K., Regev, A., & Schier, A. F. (2018). Single-cell reconstruction of developmental trajectories during zebrafish embryogenesis. <i>Science</i>, 360(6392), eaar3131.
+                    <br> Bell, A. H., Malecek, N. J., Morin, E. L., Hadj-Bouziane, F., Tootell, R. B., & Ungerleider, L. G. (2011). Relationship between functional magnetic resonance imaging-identified regions and neuronal category selectivity. <i>Journal of Neuroscience</i>, 31(34), 12229-12240.
+                    <br> LeCun, Y., Cortes, C., & Burges, C. J. (1998). The MNIST database of handwritten digits, 1998. URL http://yann.lecun.com/exdb/mnist, 10, 34.
+                    <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
+                </p>
 
-                </div>
-            </section>
-        </div>
-        <!-- Bootstrap core JavaScript -->
-        <script src="../../js/jquery.min.js"></script>
-        <script src="../../js/bootstrap.bundle.js"></script>
-        <!-- Plugin JavaScript -->
-        <script src="../../js/jquery.easing.js"></script>
-        <!-- Custom scripts for this template -->
-        <script src="../../js/resume.js"></script>
-        <script src="//unpkg.com/force-graph"></script>
-        <script src="//unpkg.com/force-graph"></script>
-        <script src="../jsfunctions/tda.js"></script>
-    </body>
-    <!-- 
+            </div>
+        </section>
+    </div>
+    <!-- Bootstrap core JavaScript -->
+    <script src="../../js/jquery.min.js"></script>
+    <script src="../../js/bootstrap.bundle.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="../../js/jquery.easing.js"></script>
+    <!-- Custom scripts for this template -->
+    <script src="../../js/resume.js"></script>
+    <script src="//unpkg.com/force-graph"></script>
+    <script src="//unpkg.com/force-graph"></script>
+    <script src="../jsfunctions/tda.js"></script>
+</body>
+<!-- 
         <div class="flier2"><img src="img/random/rock.png" alt="" style="width:500px;height:300px;"></div>
-        
+
         <div class="flier"><img src="img/random/doge.png" alt="" style="width:300px;height:400px;"></div>
          -->
-     <footer style="align:center;">&copy; Copyright 2016<script>new Date().getFullYear()>2016&&document.write("-"+new Date().getFullYear());</script> by Baihan Lin</footer>
-</html>
+<footer style="align:center;">&copy; Copyright 2016
+    <script>
+        new Date().getFullYear() > 2016 && document.write("-" + new Date().getFullYear());
+    </script> by Baihan Lin</footer>
 
+</html>
