[DBG] test scatterplotting

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -190,6 +190,7 @@
                                 <input type="radio" name="clustering" value="none" checked> &nbsp;none &nbsp;
                                 <input type="radio" name="clustering" value="kmeans"> &nbsp;kMeans &nbsp;
                                 <input type="radio" name="clustering" value="knn"> &nbsp;kNN &nbsp;
+                                <input type="radio" name="clustering" value="sl"> &nbsp;SL &nbsp;
                             </td>
                         </tr>
                         <tr>
@@ -213,7 +214,8 @@
                 <div id="graph"></div>
 
                 <script>
-                    dummyGraph();
+                    // dummyGraph();
+                    drawPlots();
                 </script>
 
                 <p class="mb-5 text-primary">
