[DBG] try plot transition

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -155,7 +155,7 @@
                             <td class="mb-5 text-primary">
                                 <input type="radio" name="dataset" value="farrell" checked>&nbsp;scRNA-seq [10]&nbsp;
                                 <input type="radio" name="dataset" value="mnist">&nbsp; MNIST &nbsp;
-                                <input type="radio" name="dataset" value="farrell" checked>&nbsp; neural recording &nbsp;
+                                <input type="radio" name="dataset" value="neural">&nbsp; neural recording &nbsp;
                             </td>
                         </tr>
 
@@ -207,7 +207,7 @@
 
                         </tr>
                     </table>
-
+                    <h4>Click on this text to update chart with new values</h4>
                     <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
                 </p>
 
