--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -233,7 +233,7 @@
 
                         </tr>
                     </table>
-                    <h4>Click on this text to update chart with new values</h4>
+                    <h4>Click on this text to update</h4>
                     <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
                 </p>
 
@@ -268,6 +268,8 @@
                             var newNumber2 = Math.floor(Math.random() * maxRange); // New random integer
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
+                        var data = require('../dataset/farrell2018_pca.json');
+                        var dataset = data.data['emb']
 
                         // Setup settings for graphic
                         var canvas_width = 500;
