[DBG] more d3 select debug

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -242,25 +242,25 @@
 
                 <script>
                     // dummyGraph();
-                    drawPlots();
+                    // drawPlots();
 
-                    function dummyGraph() {
-                        fetch('../datasets/miserables.json').then(res => res.json()).then(data => {
-                            const Graph = ForceGraph()
-                                (document.getElementById('graph'))
-                                .graphData(data)
-                                .nodeId('id')
-                                .nodeRelSize(4)
-                                .nodeVal('val')
-                                .nodeLabel('id' + ':' + 'group')
-                                .nodeAutoColorBy('group')
-                                .linkSource('source')
-                                .linkTarget('target')
-                                .height(600)
-                        });
-                    }
+                    // function dummyGraph() {
+                    //     fetch('../datasets/miserables.json').then(res => res.json()).then(data => {
+                    //         const Graph = ForceGraph()
+                    //             (document.getElementById('graph'))
+                    //             .graphData(data)
+                    //             .nodeId('id')
+                    //             .nodeRelSize(4)
+                    //             .nodeVal('val')
+                    //             .nodeLabel('id' + ':' + 'group')
+                    //             .nodeAutoColorBy('group')
+                    //             .linkSource('source')
+                    //             .linkTarget('target')
+                    //             .height(600)
+                    //     });
+                    // }
 
-                    function drawPlots() {
+                    // function drawPlots() {
                         var dataset = []; // Initialize empty array
                         var numDataPoints = 15; // Number of dummy data points
                         var maxRange = Math.random() * 1000; // Max range of new values
@@ -270,8 +270,8 @@
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
                         // var data = require('../dataset/farrell2018_pca.json');
-                        import data from '../dataset/farrell2018_pca.json';
-                        var dataset = data.data['emb']
+                        // import data from '../dataset/farrell2018_pca.json';
+                        // var dataset = data.data['emb']
 
                         // Setup settings for graphic
                         var canvas_width = 500;
@@ -395,7 +395,7 @@
                                     .call(yAxis);
                             });
 
-                    }
+                    // }
 
                     function pcaTDAGraph() {
                         fetch('../datasets/farrell2018_pca.json').then(res => res.json()).then(data => {
