[DBG] more d3 select debug

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -233,7 +233,7 @@
 
                         </tr>
                     </table>
-                    <h4>Click on this text to update</h4>
+                    <h4>Click on this to update</h4>
                     <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
                 </p>
 
