--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -397,23 +397,23 @@
 
                     // }
 
-                    function pcaTDAGraph() {
-                        fetch('../datasets/farrell2018_pca.json').then(res => res.json()).then(data => {
-                            const Graph = ForceGraph()
-                                (document.getElementById('graph'))
-                                .graphData(data)
-                                .nodeId('id')
-                                .nodeRelSize(4)
-                                .nodeVal('val')
-                                .nodeLabel('id' + ':' + 'group')
-                                .nodeAutoColorBy('group')
-                                .linkSource('source')
-                                .linkTarget('target')
-                                .height(600)
-                        });
-                    }
+                    // function pcaTDAGraph() {
+                    //     fetch('../datasets/farrell2018_pca.json').then(res => res.json()).then(data => {
+                    //         const Graph = ForceGraph()
+                    //             (document.getElementById('graph'))
+                    //             .graphData(data)
+                    //             .nodeId('id')
+                    //             .nodeRelSize(4)
+                    //             .nodeVal('val')
+                    //             .nodeLabel('id' + ':' + 'group')
+                    //             .nodeAutoColorBy('group')
+                    //             .linkSource('source')
+                    //             .linkTarget('target')
+                    //             .height(600)
+                    //     });
+                    // }
 
-                    var nodes, links
+                    // var nodes, links
                 </script>
 
                 <p class="mb-5 text-primary">
