[DBG] find the bug

--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -233,12 +233,11 @@
 
                         </tr>
                     </table>
-                    <h4>Click on here to update</h4>
+                    <h4>Click on this text to update</h4>
                     <!-- <img src="../../img/random/sleep.jpg" alt="" class="photo"> -->
                 </p>
 
                 <div id="graph"></div>
-                <svg></svg>
 
                 <script>
                     // dummyGraph();
@@ -304,7 +303,7 @@
                             .ticks(5);
 
                         // Create SVG element
-                        var svg = d3.select("svg") // This is where we put our vis
+                        var svg = d3.select("#graph") // This is where we put our vis
                             .append("svg")
                             .attr("width", canvas_width)
                             .attr("height", canvas_height)
@@ -445,8 +444,8 @@
     <!-- Custom scripts for this template -->
     <script src="../../js/resume.js"></script>
     <script src="//unpkg.com/force-graph"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <script src="../jsfunctions/tda.js"></script>
-    <script src="https://d3js.org/d3.v4.min.js"></script>
 </body>
 <!-- 
         <div class="flier2"><img src="img/random/rock.png" alt="" style="width:500px;height:300px;"></div>
