--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -271,8 +271,8 @@
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
                         // var data = require('../dataset/farrell2018_pca.json');
-                        // import data from '../dataset/farrell2018_pca.json';
-                        // var dataset = data.data['emb']
+                        import data from '../dataset/farrell2018_pca.json';
+                        var dataset = data.data['emb']
 
                         // Setup settings for graphic
                         var canvas_width = 500;
