--- a/viz/TDA/index.html
+++ b/viz/TDA/index.html
@@ -270,14 +270,13 @@
                         //     var newNumber2 = Math.floor(Math.random() * maxRange); // New random integer
                         //     dataset.push([newNumber1, newNumber2]); // Add new number to array
                         // }
-                        // var data = require('../dataset/farrell2018_pca.json');
-                        import data from '../dataset/farrell2018_pca.json';
+                        // var data = require('../datasets/farrell2018_pca.json');
+                        import data from '../datasets/farrell2018_pca.json';
                         for (var i = 0; i < data.data.length; i++) {
                             var newNumber1 = data.data[i].emb[0]; 
                             var newNumber2 = data.data[i].emb[1];
                             dataset.push([newNumber1, newNumber2]); // Add new number to array
                         }
-                        var dataset = data.data['emb']
 
                         // d3.json("../dataset/farrell2018_pca.json", function(error, data) {
                         //     data.forEach(function(d) {
@@ -357,6 +356,12 @@
                                     var newNumber1 = Math.floor(Math.random() * maxRange); // Random int for x
                                     var newNumber2 = Math.floor(Math.random() * maxRange); // Random int for y
                                     dataset.push([newNumber1, newNumber2]); // Add new numbers to array
+                                }
+                                import data from '../datasets/farrell2018_umap.json';
+                                for (var i = 0; i < data.data.length; i++) {
+                                    var newNumber1 = data.data[i].emb[0]; 
+                                    var newNumber2 = data.data[i].emb[1];
+                                    dataset.push([newNumber1, newNumber2]); // Add new number to array
                                 }
 
                                 // Update scale domains
